# coolQPythonBot

./: .flake8  .gitignore  .gitmodules  README.md  app.py  asyncRequest.py  config.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: -----.md  bug--.md
.github/workflows/: lint.yml
configs/: bot.yml  default.Image2Illust.yml  default.NSFWImages.yml  default.RSS.yml  default.analysis.yml  default.bilibili.yml  default.bot.yml  default.gen_id.yml  default.greeting.yml  default.network.yml  default.pixiv.yml  default.utils.yml
configs/default/: bot.yml  utils.yml
docs/: Configuration.md  Deployment.md  Development.md  README.md  Usages.md
errorManager/: __init__.py  database.py
permission/: __init__.py  database.py
plugins/: URLExtract.py  bilibili.py  blacklist.py  broadcast.py  bug.py  curse.py  debug.py  experimentLab.py  generateID.py  getRunTime.py  greeting.py  hitokoto.py  hitokotoMan.py  randomRepeater.py  repeater.py  rss.py  wikipedia.py  wikipediaGuide.py
plugins/Image2Anime/: __init__.py  config.py  default.yml  network.py  tools.py
plugins/Image2Illust/: __init__.py  config.py  default.yml  network.py  parse.py
plugins/NSFWImages/: __init__.py  config.py  default.yml  network.py
utils/: __init__.py  botConfig.py  config.py  configsReader.py  customConfig.py  customDecorators.py  customObjects.py  database.py  db.py  decorators.py  errorExpect.py  exception.py  exceptions.py  initialization.py  log.py  manager.py  message.py  messageProc.py  network.py  networkUtils.py  objects.py  pluginManager.py  tmpFile.py  utils.py
(+110 files in other folders)
